cluster/apps/utils/kyverno/policies/add-postgres-init-db.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-postgres-init-db
  annotations:
    policies.kyverno.io/title: Add postgress init db
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Add the postgres init-db init container to the pod.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: windmill-init-db
      match:
        resources:
          kinds: 
            - Deployments
          subjcts:
            - windmill
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                initContainers:
                  image: ghcr.io/onedr0p/postgres-initdb:14.7@sha256:633a7416ba34224caf4d7aac70b6e447c875c9a44d81822c961fcb35d383d23e
                  env:
                    - name: POSTGRES_HOST
                      value: ${POSTGRES_RW_URL}
                    - name: POSTGRES_DB
                      value: windmill
                    - name: POSTGRES_SUPER_PASS
                      valueFrom:
                        secretKeyRef:
                          name: postgres-superuser
                          key: password
                    - name: POSTGRES_USER
                      valueFrom:
                        secretKeyRef:
                          name: windmill
                          key: POSTGRES_USER
                    - name: POSTGRES_PASS
                      valueFrom:
                        secretKeyRef:
                          name: windmill
                          key: POSTGRES_PASS
